style: estilizando section dropdown

--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,10 @@
   --white: #ffffff;
   --purple: #7a2b58;
 }
+body h3{
+  color: var(--yellow);
+  font-weight: bold;
+}
 .container-header{
   background: url("../assets/images/header-1920.png");
   width: 85rem ;
@@ -103,6 +107,14 @@ color: var(--yellow);
 color: var(--white);
 }
 
+#section-dropdown-header-text-show{
+  display: block;
+}
+
+#section-dropdown-header-text-hidden{
+  display: none;
+}
+
 @media (max-width:375px) {
   .container-header{
     padding: 2rem;
@@ -140,21 +152,28 @@ color: var(--white);
     justify-content: center;
   }
 
+  .container-header-mask img{
+    height: 5rem;
+    width: 300%
+  }
+
   .section-content{
-    max-width: 370px;
-    max-width: 100%;
     display:flex;
     flex-direction: column;
     position: relative;
-    justify-content: center;
-  
+    padding-top: 100px;
+    height: 100%;
   }
-   #title-section-content{
+   #title-section-content-hidden{
     display: none;
+
+  }
+  #title-section-content-visible{
+    margin: 0 0 2rem 0;
   }
 
   #title-container-section-text{
-    margin: 0 0 2rem 0;
+    margin: 0
   }
   .container-section-content{
     display: flex;
@@ -177,10 +196,77 @@ color: var(--white);
     display: flex;
     margin-top: -100px;
   }
- #container-section-bottom-left{
-  height: 2rem;
-  margin-left: -380px;
-  margin-top: 8px;
+ .container-section-bottom-left{
+  display: flex;
+  height: 3rem;
+  width: 3rem;
+  overflow: hidden;
+  align-self: flex-start;
+  margin-left: -10px;
 }
 
+.container-section-bottom-left img{
+  max-width: 100%;
+  transform: rotate(90deg);
+  margin-bottom: -50px;
 }
+
+.section-dropdown{
+  background-color: var(--navy-blue);
+}
+.section-dropdown-header{
+  background-color: var(--navy-blue);
+  padding:25px;
+}
+.section-dropdown-header h3{
+  display: none;
+}
+
+#section-dropdown-header-text-show{
+  display: none;
+}
+
+#section-dropdown-header-text-hidden{
+  display: block;
+  color: var(--white);
+}
+
+.section-cards .container-card{
+  background-color: var(--white);
+  text-align: center;
+  padding-top: 10%;
+  border-radius: 30px;
+  margin: 2rem;
+}
+.section-container-button{
+  background-color: var(--purple);
+  border-radius: 0 0 12px 12px;
+  height: 3rem;
+}
+.section-button-show{
+  border: none;
+  border-radius: 50%;
+  height: 4rem;
+  width: 4rem;
+  margin-top: 1rem;
+}
+.section-button-show img{
+  width: 80%;
+padding: 5px;
+}
+.section-container-info-text{
+  background-color:#ffcc33;
+  display: flex;
+  flex-direction: column;
+align-items: center;
+
+
+}
+.section-container-info-button{
+width: fit-content;
+border-radius: 50%;
+width: 4rem;
+height: 4rem;
+background-color: var(--purple);
+}
+} 
