--- a/styles/index.css
+++ b/styles/index.css
@@ -5,13 +5,6 @@
   font-family: Raleway;
 }
 
-@font-face {
-  font-family: "Urbanist";
-  src: url("../assets/fonts/Urbanist-VariableFont_wght.ttf") format(truetype);
-  font-weight: 400;
-  font-style: normal;
-}
-
 :root {
   --navy-blue: #03b5b0;
   --yellow: #ffcc33;
@@ -152,6 +145,7 @@ h2{
   flex-direction: column;
   align-items: center;
   width: 16rem;
+  position:relative;
 
 }
 
@@ -159,9 +153,11 @@ h2{
   margin-top: 1rem;
   background-color: var(--white);
   width: 100%;
+  max-height: 12rem;
   border-radius: 20px 20px 0 0;
   display: flex;
   justify-content: center;
+
 }
 .container-cards-image img{
   height: 60%;
@@ -173,28 +169,34 @@ h2{
   display: flex;
   flex-direction: column;
 }
-.dropdown-container-icon{
+.dropdown-container-button{
   background-color: var(--purple);
   border-radius: 0px 0 20px 20px;
+  width: 16rem;
+  height: 3rem;
   z-index: 1;
+  display: flex;
+  justify-content: center;
+  position: relative;
+
+
 }
 /* esta com index  1 para aparecer  */
 .dropdown-icon-arrow{
   background-color: var(--white);
-  text-align: center;
-  margin: auto;
   height: 3rem;
   width: 3rem;
+  border: none;
   border-radius: 50%;
   display: flex;
-  justify-content: center;
-  margin-bottom: -1rem;
-  
+  margin: 1rem 0 -1rem 0;
+
 
 }
 
 .dropdown-icon-arrow img{
   width: 80%;
+  margin: auto;
 
 }
 
@@ -205,8 +207,8 @@ h2{
   border-radius: 0 0 20px 20px;
   height: 18rem;
   margin-top: -2rem;
-  padding: 3rem 15px 0 15px;
-  /* z-index: -1; */
+  padding: 60px 15px 0 15px;
+  display: none;
   
 }
 
