feat: criação section container interative

--- a/styles/colors.css
+++ b/styles/colors.css
@@ -3,5 +3,6 @@
     --yellow: #ffcc33;
     --white: #ffffff;
     --purple: #7a2b58;
-    --grey:  #353535;
+    --darkGrey:  #353535;
+    --grey: #808080;
   }
