--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -1,95 +1,3 @@
-@media (max-width: 375px) {
-  .container-header {
-    padding: 2rem;
-    width: 66rem;
-    height: 34rem;
-    display: flex;
-    overflow: hidden;
-  }
+@media (min-device-width: 360px) {
 
-  .container-header-logo {
-    margin-top: 5rem;
-    margin-bottom: 4.5rem;
-    width: 10rem;
-  }
-  .container-header-logo img {
-    max-width: 100%;
-  }
-  .container-header-text {
-    height: auto;
-    text-align: center;
-    width: 20rem;
-    margin-right: 10px;
-    margin-top: 30px;
-  }
-
-  .container-header-text h1 {
-    font-size: 44px;
-    font-weight: 700;
-    margin-top: 1rem;
-  }
-
-  .container-header-text p {
-    font-size: 1.1rem;
-    display: flex;
-    justify-content: center;
-  }
-
-  .container-header-mask img {
-    height: 5rem;
-    width: 300%;
-  }
-
-  .section-content {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    padding-top: 100px;
-    padding-bottom: 40px;
-    height: 100%;
-  }
-  #title-section-content-hidden {
-    display: none;
-  }
-  #title-section-content-visible {
-    margin: 0 0 2rem 0;
-  }
-
-  #title-container-section-text {
-    margin: 0;
-  }
-  .container-section-content {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    align-items: center;
-    max-width: 90%;
-  }
-  .container-section-text {
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-  }
-  .container-section-text ul {
-    margin-left: 1rem;
-    font-size: 1.1rem;
-    margin-top: 1rem;
-  }
-  .container-section-content img {
-    display: flex;
-    margin-top: -100px;
-  }
-  .container-section-bottom-left {
-    display: flex;
-    width: 3rem;
-  }
-
-  .container-section-bottom-left img {
-    max-width: 100%;
-    position: absolute;
-    bottom: 0;
-    margin-bottom: -5px;
-
-    
-  }
 }
