--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -1,3 +1,89 @@
-@media (min-device-width: 360px) {
+@media screen and (min-width: 230px) and (max-width: 375px) {
 
+    body{
+        width: 25rem;
+    }
+  header {
+    background: url(../assets/images/header-1024.png);
+    position: relative;
+    background-size: cover;
+    background-position: center center;
+    width:100%;
+    height: 34rem;
+    opacity: 1;
+  }
+
+  header .container-logo img {
+    margin-top: 6.5rem;
+    margin-bottom: 2.5rem;
+    width: 8.6rem;
+    height: 2.5rem;
+  }
+  header .container-title {
+    font-size: 30%;
+    margin: 3rem 3rem 0 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    height: 4rem;
+    width: 20rem;
+    align-items: center;
+  }
+
+  header .container-title > h1 {
+    font-size: 2.9rem;
+  }
+
+  header .container-title > p {
+    font-size: 1.1rem;
+  }
+  header figure {
+    display: none;
+  }
+
+  main #main-article {
+    width: auto;
+    height: 34rem;
+    margin: 0;
+
+  }
+
+  #main-article .article-content {
+    display: flex;
+    padding: 2rem;
+    color: var(--white);
+    position: absolute;
+    margin: 6rem 15px 0 10px;
+    height: auto;
+    flex-direction: column;
+
+  }
+
+  #main-article  h3{
+    margin-top: 8rem;
+  }
+  #main-article .article-content img {
+    transform:translate(40%, -80%);
+    width: 60%;
+    margin:0
+  }
+  #main-article .article-content div {
+    margin:0
+    
+  }
+
+  #main-article figure {
+    width:5rem;
+    height: 1rem;
+    transform: translate(0);
+    transform: rotate(5deg);
+    bottom: 1rem;
+    position: absolute;
+    left: -2.5rem;
+    margin:0
+  }
+
+  #main-article figure img{
+    width:100%;
+  }
 }
